@@ -5,7 +5,7 @@ a5bc22f1fd7d4a0fc5ad8b0f6dc1ddedb9e8e97a assets/ancillary/blockstates/diamond_pi
 c8450849ededa8b7eaf669493c5096823bddbdab assets/ancillary/blockstates/emerald_pillar.json
 df4c8a70106415045bd2e652fc7874750bde8245 assets/ancillary/blockstates/gold_pillar.json
 c55b7039b7e3f484fcf6cf74d634dcf047d576fe assets/ancillary/blockstates/iron_pillar.json
-28535ec8e05e2cc3b8a812e02139d9fbee33c774 assets/ancillary/blockstates/leather_block.json
+a95c4ab8756b3acd0f18317b0f54fdf2a1c9def6 assets/ancillary/blockstates/leather_block.json
 21fe380fa939360acee097bb1abf3f94176b1e6b assets/ancillary/blockstates/lush_stone.json
 b8e39873dff907298d154cc0c396d6088b9b6985 assets/ancillary/blockstates/netherite_pillar.json
 c1391ef452d6084e5cb1878e9f1dfd8426657c3d assets/ancillary/blockstates/pebbles.json
@@ -63,7 +63,8 @@ d91b7c855a084cb77da10c49393c362b5aac5308 assets/ancillary/models/block/gold_pill
 9c45e9c62783ac63a7e6f9f19c5f9b71774d1226 assets/ancillary/models/block/gold_pillar_horizontal.json
 e3d5a4705d1cd1d0a518e2f17f7c34818abd6f09 assets/ancillary/models/block/iron_pillar.json
 7cb0983b9ce0714f01a5d3fc6b339dda110d5260 assets/ancillary/models/block/iron_pillar_horizontal.json
-92583443fb39079cbbeaa972cbeb7501583fe422 assets/ancillary/models/block/leather_block.json
+7094e0e6b40650784ecb829893ae16c3bb79c68e assets/ancillary/models/block/leather_block.json
+5c93e0752cf386738b281f5e5cb67f15c8335f71 assets/ancillary/models/block/leather_block_horizontal.json
 b3905dc42d8bd64822f3a983f75406e0b30c15a4 assets/ancillary/models/block/lush_stone.json
 df477092dfffca98f97a8eee517f8a1db670f249 assets/ancillary/models/block/netherite_pillar.json
 ae2b1926c5e5ace56ced726d6629c9a97f59e463 assets/ancillary/models/block/netherite_pillar_horizontal.json
