@@ -1,7 +1,16 @@
 {
   "variants": {
-    "": {
+    "axis=x": {
+      "model": "ancillary:block/leather_block_horizontal",
+      "x": 90,
+      "y": 90
+    },
+    "axis=y": {
       "model": "ancillary:block/leather_block"
+    },
+    "axis=z": {
+      "model": "ancillary:block/leather_block_horizontal",
+      "x": 90
     }
   }
 }
