@@ -1,5 +1,5 @@
 {
-  "parent": "ancillary:block/dyeable_cube_column",
+  "parent": "ancillary:block/dyeable_cube_column_horizontal",
   "textures": {
     "side": "ancillary:block/leather_block_side",
     "end": "ancillary:block/leather_block_end"
