@@ -1,0 +1,12 @@
+{
+  "parent": "ancillary:block/dyeable_cube",
+  "textures": {
+    "particle": "#side",
+    "down": "#end",
+    "up": "#end",
+    "north": "#side",
+    "east": "#side",
+    "south": "#side",
+    "west": "#side"
+  }
+}
