@@ -1,6 +1,9 @@
 * 1.16.5-0.0.8b
+Blocks
+- Leather blocks are now rotatable
 Textures
 - Updated texture of the sakura sign to correlate with the sign texture updates in 1.17.
+- Updated leather block texture
 * 1.16.5-0.0.8
 Blocks
 - Added leather blocks
